--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" style="width: 10px; height: 10px; object-fit: contain;" href="/assets/vicky.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
